Fix GitHub Actions: Add React build steps before Firebase deployment

--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -11,6 +11,18 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '18'
+          cache: 'npm'
+          cache-dependency-path: smartcalendar-react/package-lock.json
+      - name: Install dependencies
+        run: npm install
+        working-directory: ./smartcalendar-react
+      - name: Build React app
+        run: npm run build
+        working-directory: ./smartcalendar-react
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: ${{ secrets.GITHUB_TOKEN }}
